--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8089
 
-spring.datasource.url=jdbc:mysql://localhost:3306/schoolpython?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringSecurity?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
