--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,17 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.9</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
-	<groupId>com.tasks.organizer</groupId>
-	<artifactId>tasks.organizer</artifactId>
+	<groupId>com.vagelis</groupId>
+	<artifactId>SpringSecurity</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tasks.organizer</name>
-	<description>daily activities organizer</description>
+	<name>SpringSecurity</name>
+	<description>Demo project for Spring Security</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-mongodb</artifactId>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
